--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <java.version>11</java.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <maven.tomcat.url>http://localhost:8086/manager/text</maven.tomcat.url>
+        <maven.tomcat.url>http://192.168.56.102:8085/manager/text</maven.tomcat.url>
         <maven.tomcat.server>Ubuntu</maven.tomcat.server>
         <maven.tomcat.path>/${project.name}</maven.tomcat.path>
     </properties>
